# embedding-inference

./: Cargo.toml  README.MD
embedding_generator/src/: main.rs
inf_server/: Cargo.toml
inf_server/src/: main.rs
models_hf/: Cargo.toml
models_hf/src/: bert.rs
