[package]
name = "inf_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.197"
serde_json = "1.0.107"
tokio = "1.36.0"
bincode = "2.0.0-rc.3"
anyhow = "1.0.75"
csv = "1.3.0"
models_hf = { path = "../models_hf" }
