[package]
name = "models_hf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
hf-hub = "0.3.2"
serde_json = "1.0.114"
tokenizers = "0.15.2"
